--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-studio",
+  "name": "react-lab",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/react-studio",
+  "homepage": "/react-lab",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
